feat: adds authenticator interface, jwt authenticator method and route to create token
